.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:15:14 **** Build of configuration Debug for project PC01 ****
make all 
Building file: ../src/PC01.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PC01.d" -MT"src/PC01.d" -o "src/PC01.o" "../src/PC01.cpp"
Finished building: ../src/PC01.cpp
 
Building target: PC01
Invoking: GCC C++ Linker
g++  -o "PC01"  ./src/PC01.o   
Finished building target: PC01
 
20:15:29 **** Incremental Build of configuration Debug for project PC01 ****
make all 
make: Nothing to be done for `all'.
20:19:06 **** Build of configuration Debug for project PC01 ****
make all 
Building file: ../src/PC01.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PC01.d" -MT"src/PC01.d" -o "src/PC01.o" "../src/PC01.c"
Finished building: ../src/PC01.c
 
Building target: PC01
Invoking: GCC C Linker
gcc  -o "PC01"  ./src/PC01.o   
Finished building target: PC01
 
20:30:38 **** Incremental Build of configuration Debug for project PC01 ****
make all 
Building file: ../src/PC01.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PC01.d" -MT"src/PC01.d" -o "src/PC01.o" "../src/PC01.c"
../src/PC01.c: In function ‘main’:
../src/PC01.c:10:2: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
  printf("Hello World!\n");
  ^
../src/PC01.c:10:2: warning: incompatible implicit declaration of built-in function ‘printf’ [enabled by default]
Finished building: ../src/PC01.c
 
Building target: PC01
Invoking: GCC C Linker
gcc  -o "PC01"  ./src/PC01.o   
Finished building target: PC01
 
09:25:46 **** Build of configuration Debug for project PC01-1 ****
make all 
Building file: ../src/hello.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/hello.d" -MT"src/hello.d" -o "src/hello.o" "../src/hello.c"
../src/hello.c: In function ‘main’:
../src/hello.c:9:2: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
  printf("Hello World!\n");
  ^
../src/hello.c:9:2: warning: incompatible implicit declaration of built-in function ‘printf’ [enabled by default]
Finished building: ../src/hello.c
 
Building target: PC01-1
Invoking: GCC C Linker
gcc  -o "PC01-1"  ./src/hello.o   
Finished building target: PC01-1
 
09:25:47 **** Build of configuration Debug for project PC01-2 ****
make all 
Building file: ../mc.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mc.d" -MT"mc.d" -o "mc.o" "../mc.c"
../mc.c: In function ‘main’:
../mc.c:37:22: error: invalid operands to binary % (have ‘double’ and ‘double’)
   printf("%f\n", op1 % op2);
                      ^
../mc.c:42:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [mc.o] Error 1
